minor-feat: Recipeの新規作成を追加
